# aws-tools

./: .gitignore  README.md
bash/: .gitignore  README.md  audit-ec2-instances.sh  audit-ecs-cluster.sh  audit-rds-instances.sh
python/: .gitignore  Dockerfile  Makefile  README.md  aws-cloudwatchlogs-get-log-events.py  aws-glue-list-crawlers.py  aws-glue-run-crawlers.py  aws-iam-credentials-report.py  aws-sg-list-rules.py  aws-ssm-copy-parameters.py  aws-ssm-describe-parameters.py  aws-ssm-get-parameter.py  aws-ssm-put-parameter.py  aws-stepfunctions-execute-state-machine.py  aws-stepfunctions-list-state-machines.py  file_finder.py  logging.ini  pyproject.toml  run.sh
python/aws/: aws.py  aws_service.py  cloudwatchlogs.py  ec2.py  glue.py  iam.py  iam_credential_report.py  ssm.py  stepfunctions.py
python/support/: aws.py  common.py  csv_reader.py  logging_configurator.py
