[tool.poetry]
name = "aws-tools-python"
version = "0.1.0"
description = "aws tools in python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.18"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
