[tool.poetry]
name = "aws-tools-python"
version = "0.1.0"
description = "aws tools in python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.14.18"
tabulate = "^0.8.7"
pytz = "^2020.1"
pandas = "^1.1.3"

[tool.poetry.dev-dependencies]
bpython = "^0.19"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
